--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,6 @@
             <artifactId>h2</artifactId>
         </dependency>
 
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
@@ -114,7 +113,11 @@
             <scope>test</scope>
         </dependency>
 
-
+        <dependency>
+            <groupId>io.flowcov</groupId>
+            <artifactId>flowcov-camunda-core</artifactId>
+            <version>0.2.1</version>
+        </dependency>
     </dependencies>
 
 
